--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <script src = "js/showdown.min.js"></script>
     <meta charset="UTF-8">
     <title>Humdub Markdown</title>
-
+		<style>
+			body{
+				font-family : Sans-serif
+			}
+		</style>
 </head>
 
 
-<body>
-
-
-
+ <body>
+	 <h1>
+		 Markdown pour Humhub
+	 </h1>
+	 <i> Le markdown sur Humhub ne fonctionnant pas forcément comme on s'y attend,
+	 voici quelques exemples d'utilisation du markdown avec une syntaxe 100% compatible Humhub.
+	 </i>
+	 <br><br>
 
 <textarea id ="editableText" style = "width:50%" rows="30" cols="50">
 # Titre 1
