--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ _Italique_
 Listes simples : 
 - première ligne
 - ne pas oublier l'espace après le tiret
-    - Rajouter deux espaces devant le tiret pour descendre la ligne d'un niveau (Ici il y en a 4 mais sur humhub il faut bien en mettre 2) 
+    - Rajouter deux espaces devant le tiret pour descendre la ligne d'un niveau
+    - Ici il y en a 4 mais sur humhub il faut bien en mettre 2 
 
 		
 Liste à numéro :
